<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".QuizzFragment">


    <ImageButton
        android:id="@+id/quiz_imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textAlignment="center"
        android:background="@android:color/transparent"
        android:layout_marginTop="64dp"
        android:src="@drawable/quiz_close_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/quiz_loading_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/crimson_text"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/loading_quiz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_imageButton" />

    <TextView
        android:id="@+id/quiz_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/questions"
        android:fontFamily="@font/work_sans"
        android:textColor="@color/ligtText"
        app:layout_constraintEnd_toEndOf="@+id/quiz_imageButton"
        app:layout_constraintStart_toStartOf="@+id/quiz_loading_text"
        app:layout_constraintTop_toBottomOf="@+id/quiz_loading_text" />

    <TextView
        android:id="@+id/quiz_number_of_questions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/_0"
        android:textColor="@color/wite"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="@+id/quiz_question"
        app:layout_constraintStart_toStartOf="@+id/quiz_question"
        app:layout_constraintTop_toBottomOf="@+id/quiz_question" />

    <ProgressBar
        android:id="@+id/quiz_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/quiz_number_of_questions"
        app:layout_constraintEnd_toEndOf="@+id/quiz_loading_text"
        app:layout_constraintStart_toStartOf="@+id/quiz_imageButton"
        app:layout_constraintTop_toBottomOf="@+id/quiz_loading_text" />

    <TextView
        android:id="@+id/quiz_seconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10"
        android:textColor="@color/wite"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/quiz_progressBar"
        app:layout_constraintEnd_toEndOf="@+id/quiz_progressBar"
        app:layout_constraintStart_toStartOf="@+id/quiz_progressBar"
        app:layout_constraintTop_toTopOf="@+id/quiz_progressBar" />

    <TextView
        android:id="@+id/quiz_fetcing_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/fetching_data"
        android:textAlignment="center"
        android:textColor="@color/wite"
        android:textSize="25sp"
        android:fontFamily="@font/work_sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_number_of_questions" />

    <Button
        android:id="@+id/quiz_option_button_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/outline_btn_background"
        android:fontFamily="@font/work_sans"
        android:padding="12dp"
        android:textAllCaps="false"
        android:text="@string/option_button"
        android:textColor="@color/ligtText"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_fetcing_data" />

    <Button
        android:id="@+id/quiz_option_button_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:textAllCaps="false"
        android:text="@string/option_button"
        android:textColor="@color/ligtText"
        android:textSize="16sp"
        android:padding="12dp"
        android:background="@drawable/outline_btn_background"
        android:fontFamily="@font/work_sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_option_button_1" />

    <Button
        android:id="@+id/quiz_option_button_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:textAllCaps="false"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/option_button"
        android:textColor="@color/ligtText"
        android:textSize="16sp"
        android:padding="12dp"
        android:background="@drawable/outline_btn_background"
        android:fontFamily="@font/work_sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_option_button_2" />

    <TextView
        android:id="@+id/quiz_veryfing_question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/work_sans"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:text="@string/verifying_answer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quiz_option_button_3" />

    <Button
        android:id="@+id/quiz_next_question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/next_question"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:textColor="@color/ligtText"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>